# mcscanner-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  packets.rs  protocol.rs  scanner.rs
