[package]
name = "mcscanner-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.9"
futures = "0.3.32"
ipnet = "2.12.0"
mio = "1.2.0"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
